[gd_scene load_steps=8 format=3 uid="uid://cnkjlmhcyjdft"]

[ext_resource type="Script" path="res://BlurExample.gd" id="1_1kp6q"]
[ext_resource type="Material" uid="uid://bbal7jrquqit3" path="res://BlurYMaterial.tres" id="1_dlvcd"]
[ext_resource type="Material" uid="uid://cv2mrmyhkpw46" path="res://BlurXMaterial.tres" id="1_i28u4"]
[ext_resource type="Texture2D" uid="uid://dd6lpwpebhusg" path="res://the eye.jpg" id="2_2qbr7"]
[ext_resource type="Texture2D" uid="uid://xsv7c6p4np53" path="res://icon.svg" id="2_a11mo"]
[ext_resource type="Shader" path="res://BlurLod.gdshader" id="5_pg4od"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0teb7"]
shader = ExtResource("5_pg4od")
shader_parameter/intensity = 0.298

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kp6q")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2qbr7")

[node name="Sprite2D1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(32, 32)
texture = ExtResource("2_a11mo")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(192, 32)
scale = Vector2(4, 4)
texture = ExtResource("2_a11mo")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 3
texture_repeat = 2
position = Vector2(32, 192)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_a11mo")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 512, 512)

[node name="BlurNode" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurX" type="ColorRect" parent="BlurNode"]
unique_name_in_owner = true
texture_filter = 2
material = ExtResource("1_i28u4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="BlurNode/BlurX"]
copy_mode = 2

[node name="BlurY" type="ColorRect" parent="BlurNode"]
unique_name_in_owner = true
texture_filter = 4
material = ExtResource("1_dlvcd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="BlurNode/BlurY"]
copy_mode = 2

[node name="BlurLod" type="ColorRect" parent="BlurNode"]
unique_name_in_owner = true
texture_filter = 4
material = SubResource("ShaderMaterial_0teb7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="BlurNode/BlurLod"]
copy_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "LOD:"

[node name="BlurLodSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 5.0
step = 0.0

[node name="LodLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Blur radius:"

[node name="BlurRadiusSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 50.0
step = 0.0
value = 10.0

[node name="BlurRadiusLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
